# aivyx

./: .gitignore  CHANGELOG.md  Cargo.toml  FUTURE_ROADMAP.md  README.md  SECURE.md
.cargo/: config.toml
.gitea/workflows/: ci.yml  mirror.yml  release.yml
.github/workflows/: deploy-website.yml
apps/website/: package-lock.json
apps/website/src/layouts/: Layout.astro
apps/website/src/pages/: blog.astro  compare.astro  disclaimer.astro  docs.astro  download.astro  features.astro  index.astro  team.astro
crates/aivyx-billing/: Cargo.toml
crates/aivyx-billing/src/: budget.rs  ledger.rs  lib.rs  router.rs
crates/aivyx-engine-cli/: Cargo.toml
crates/aivyx-engine-cli/src/: app.rs  channel.rs  main.rs  output.rs  unlock.rs
crates/aivyx-engine-cli/src/cmd/: agent.rs  audit.rs  backup.rs  channel.rs  config.rs  digest.rs  genesis.rs  init.rs  mcp.rs  memory.rs  mod.rs  project.rs  run.rs  schedule.rs  secret.rs  server.rs  session.rs  skill.rs  status.rs  task.rs  team.rs
crates/aivyx-integration-tests/: Cargo.toml
crates/aivyx-integration-tests/src/: lib.rs
crates/aivyx-integration-tests/tests/: a2a_pipeline.rs  agent_pipeline.rs  chaos_pipeline.rs  concurrent_ops.rs  error_paths.rs  federation.rs  memory_pipeline.rs  project_pipeline.rs  scheduler_pipeline.rs  server_pipeline.rs  stress_test.rs  team_pipeline.rs  team_sessions.rs  team_task_scenarios.rs
crates/aivyx-server/: Cargo.toml
crates/aivyx-server/src/: app_state.rs  backup.rs  error.rs  lib.rs  openapi.json  scaling.rs  scheduler.rs  startup.rs  task_recovery.rs  transcription.rs  validation.rs
crates/aivyx-server/src/auth/: mod.rs  session_cache.rs
crates/aivyx-server/src/channels/: manager.rs  mod.rs  session.rs  telegram.rs
crates/aivyx-server/src/extractors/: auth_context.rs  mod.rs
crates/aivyx-server/src/middleware/: auth.rs  chaos.rs  mod.rs  rate_limit.rs  security.rs  tenant_auth.rs  trace_context.rs
crates/aivyx-server/src/routes/: a2a.rs  admin.rs  agents.rs  audit.rs  auth.rs  channels.rs  chat.rs  config.rs  digest.rs  federation.rs  health.rs  memory.rs  metrics.rs  mod.rs  openapi.rs  plugins.rs  projects.rs  schedules.rs  secrets.rs  security.rs  sessions.rs  skills.rs  status.rs  tasks.rs  teams.rs  templates.rs  tenants.rs  tools.rs  usage.rs  webhooks.rs  workflows.rs  ws.rs  ws_voice.rs
crates/aivyx-server/src/security/: capability_audit.rs  mod.rs
crates/aivyx-sso/: Cargo.toml
crates/aivyx-sso/src/: lib.rs  oidc.rs  role_mapper.rs
crates/aivyx-task/: Cargo.toml
crates/aivyx-task/benches/: planning.rs
crates/aivyx-task/src/: dag.rs  engine.rs  feedback.rs  lib.rs  planner.rs  progress.rs  skill_scoring.rs  store.rs  types.rs  workflow.rs
crates/aivyx-team/: Cargo.toml
crates/aivyx-team/benches/: message_bus.rs
crates/aivyx-team/src/: capability_delegation.rs  config.rs  decompose.rs  delegation.rs  job_tracker.rs  lib.rs  memory_sharing.rs  message_bus.rs  message_tools.rs  nonagon.rs  runtime.rs  session_store.rs  spawn.rs  suggest.rs  synthesize.rs  verify.rs
crates/aivyx-tenant/: Cargo.toml
crates/aivyx-tenant/src/: api_key.rs  context.rs  dirs.rs  lib.rs  rbac.rs  store.rs
deploy/dashboard/: Dockerfile  entrypoint.sh  nginx.conf
deploy/dashboard/src/: api.js  app.js  index.html  styles.css
deploy/desktop/: Dockerfile.build
deploy/engine/: .env.example  .env.vps5.example  Dockerfile  docker-compose.vps5.yml  docker-compose.yml  entrypoint.sh  schedules.toml
deploy/engine/agents/: business-admin.toml  devops.toml
deploy/grafana/: agent-performance.json  cost-monitoring.json  error-rates.json
deploy/helm/aivyx-engine/: Chart.yaml  values.yaml
deploy/helm/aivyx-engine/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/scripts/: build-engine.sh  build-website.sh  ci.sh  cross-build.sh  deploy.sh  release.sh  setup-vps5.sh
deploy/website/: .env.example  Dockerfile  docker-compose.yml  nginx.conf
docs/: BUILDING.md  DEPLOYMENT.md  INFRASTRUCTURE-PUBLIC.md  INFRASTRUCTURE.md  PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  RELEASE.md
docs/adr/: 0001-encrypted-storage-by-default.md  0002-capability-attenuation-model.md  0003-nonagon-team-topology.md  0004-federation-trust-model.md  0005-cost-governance-architecture.md
docs/guides/: custom-mcp-server.md  discord-a2a-bot.md  horizontal-scaling.md  kubernetes-helm.md  multi-tenant-oidc.md  slack-webhook-bot.md
docs/marketing/: BUSINESS_STRATEGY.md  MESSAGING_GUIDE.md  PRODUCT_ROADMAP.md
docs/marketing/press-kit/: README.md
docs/sdk/: rest-api.md  voice.md  websocket.md
load-tests/: README.md  a2a_task_send.js  agent_card.js  health.js
