[package]
name = "aivyx-billing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aivyx-core = { workspace = true }
aivyx-crypto = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
