[package]
name = "aivyx-integration-tests"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

# This crate exists only for integration tests — no library is published.
[lib]
name = "aivyx_integration_tests"
path = "src/lib.rs"

[dependencies]
aivyx-core = { workspace = true }
aivyx-crypto = { workspace = true }
aivyx-capability = { workspace = true }
aivyx-audit = { workspace = true }
aivyx-config = { workspace = true }
aivyx-llm = { workspace = true }
aivyx-agent = { workspace = true }
aivyx-team = { workspace = true }
aivyx-memory = { workspace = true }
aivyx-task = { workspace = true }
aivyx-billing = { workspace = true }
aivyx-server = { workspace = true }
aivyx-federation = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
async-trait = { workspace = true }
http-body-util = "0.1"
sha2 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
