[package]
name = "aivyx-team"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aivyx-core = { workspace = true }
aivyx-agent = { workspace = true }
aivyx-llm = { workspace = true }
aivyx-config = { workspace = true }
aivyx-capability = { workspace = true }
aivyx-audit = { workspace = true }
aivyx-crypto = { workspace = true }
aivyx-memory = { workspace = true, optional = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[features]
default = ["memory"]
memory = ["dep:aivyx-memory"]

[dev-dependencies]
