[package]
name = "aivyx-tenant"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aivyx-core = { workspace = true }
aivyx-crypto = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
